@@ -21,8 +21,9 @@ package org.cancogenvirusseq.muse.components;
 import static org.cancogenvirusseq.muse.components.FastaFileProcessor.FASTA_FILE_EXTENSION;
 import static org.cancogenvirusseq.muse.components.FastaFileProcessor.FASTA_TYPE;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
-import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import lombok.experimental.UtilityClass;
@@ -30,10 +31,10 @@ import org.cancogenvirusseq.muse.model.SubmissionFile;
 
 @UtilityClass
 public class ComponentTestStubs {
-  public static final String ISOLATE_1 = "ABCD/sam1/ddd/erd";
-  public static final String ISOLATE_2 = "EFG/sam2/ddd/erd";
+  public static final String STUB_RECORD_0_FASTA_HEADER = "ABCD/sam1/ddd/erd";
+  public static final String STUB_RECORD_1_FASTA_HEADER = "EFG/sam2/ddd/erd";
 
-  public static final SubmissionFile STUB_FILE_1 =
+  public static final SubmissionFile STUB_FILE_0 =
       SubmissionFile.builder()
           .fileExtension(FASTA_FILE_EXTENSION)
           .fileSize(24)
@@ -44,7 +45,7 @@ public class ComponentTestStubs {
           .submittedFileName("the.fasta")
           .build();
 
-  public static final SubmissionFile STUB_FILE_2 =
+  public static final SubmissionFile STUB_FILE_1 =
       SubmissionFile.builder()
           .fileExtension(FASTA_FILE_EXTENSION)
           .fileSize(23)
@@ -56,36 +57,58 @@ public class ComponentTestStubs {
           .build();
 
   public static final ConcurrentHashMap<String, SubmissionFile> STUB_FILE_SAMPLE_MAP =
-      new ConcurrentHashMap<>(Map.of(ISOLATE_1, STUB_FILE_1, ISOLATE_2, STUB_FILE_2));
+      new ConcurrentHashMap<>(
+          ImmutableMap.of(
+              STUB_RECORD_0_FASTA_HEADER, STUB_FILE_0, STUB_RECORD_1_FASTA_HEADER, STUB_FILE_1));
 
   public static final String STUB_PAYLOAD_TEMPLATE =
       "{\"studyId\": ${study_id}, "
           + "\"samples\": [ {\"submitterSampleId\": ${submitter id} }],"
           + "\"age\": ${age},"
           + "\"sample_collection\": { "
-          + "\"isolate\": ${isolate}"
+          + "\"fasta_header_name\": ${fasta header name}"
           + "}"
           + "}";
 
   public static final ArrayList<Map<String, String>> STUB_RECORDS =
       new ArrayList<>(
-          List.of(
-              Map.of(
+          ImmutableList.of(
+              ImmutableMap.of(
                   "study_id",
                   "TEST-PR",
                   "submitter id",
                   "sam1",
-                  "isolate",
+                  "fasta header name",
                   "ABCD/sam1/ddd/erd",
                   "age",
                   "123"),
-              Map.of(
+              ImmutableMap.of(
                   "study_id",
                   "TEST-PR",
                   "submitter id",
                   "sam2",
-                  "isolate",
+                  "fasta header name",
                   "EFG/sam2/ddd/erd",
                   "age",
                   "456")));
+
+  public static final String STUB_RECORD_0_PAYLOAD =
+      "{ \"studyId\": \"TEST-PR\", "
+          + "\"samples\": [ {\"submitterSampleId\": \"sam1\"}], "
+          + "\"age\":123, "
+          + "\"sample_collection\": { "
+          + "\"fasta_header_name\": \"ABCD/sam1/ddd/erd\""
+          + "},"
+          + "\"files\":[{\"fileName\":\"sam1.fasta\",\"fileSize\":24,\"fileMd5sum\":\"cf20195497cc8c06075a6e201e82dd17\",\"fileAccess\":\"open\",\"fileType\":\"FASTA\",\"dataType\":\"FASTA\"}]"
+          + "}";
+
+  public static final String STUB_RECORD_1_PAYLOAD =
+      "{ \"studyId\": \"TEST-PR\", "
+          + "\"samples\": [ {\"submitterSampleId\": \"sam2\"}], "
+          + "\"age\":456, "
+          + "\"sample_collection\": { "
+          + "\"fasta_header_name\": \"EFG/sam2/ddd/erd\""
+          + "},"
+          + "\"files\":[{\"fileName\":\"sam2.fasta\",\"fileSize\":23,\"fileMd5sum\":\"eecf3de7e1136d99fffdd781d76bc81a\",\"fileAccess\":\"open\",\"fileType\":\"FASTA\",\"dataType\":\"FASTA\"}]"
+          + "}";
 }
